--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Dr.muneera</title>
+    <title>متجرالكتروني</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -33,9 +33,9 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="toggleMobileMenu">
                 <ul class="navbar-nav">
-                  <li class="nav-item"><a class="nav-link" href="#">الصفحة الرئيسية</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">تسجيل دخول</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">من نحن</a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA==">الصفحة الرئيسية</a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA==">تسجيل دخول</a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA==">من نحن</a></li>
                 </ul>
               </div>
             </div>
@@ -43,7 +43,7 @@
             <div class="bg">
                 <h1>اهلا بكم في متجرنا</h1>
                 <p>تصفح منتجاتنا</p>
-                <a class="btn btn-info" href="#">تسوق</a>
+                <a class="btn btn-info" href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA==">تسوق</a>
             </div>
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
@@ -73,12 +73,12 @@
                         <h1>من نحن</h1>
                         <h3>تعرف علينا</h3>
                         <h4>واجهة متجر الكتروني (ملابس \اجهزة\مواد احتياطية)<h4>
-                        <button class="btn btn-primary">معرض اعمالنا</button><br><br>
+                        <a class="btn btn-primary" href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA==">معرض اعمالنا</a><br><br>
                         <div>
-                            <a class="fa fa-facebook" href="#"></a>
-                            <a class="fa fa-instagram" href="#"></a>
-                            <a class="fa fa-twitter"href="#"></a>
-                            <a class="fa fa-linkedin"href="#"></a>
+                            <a class="fa fa-facebook" href="https://www.facebook.com/share/19WJfSFeLe/"></a>
+                            <a class="fa fa-instagram" href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA=="></a>
+                            <a class="fa fa-twitter"href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA=="></a>
+                            <a class="fa fa-linkedin"href="https://www.instagram.com/4ts_h?igsh=MTkxdnNrdWd0ZHc2ZA=="></a>
                         </div>
                     </div>
                 </div>
